--- a/ansible/playbook/nginx_install.yml
+++ b/ansible/playbook/nginx_install.yml
@@ -2,19 +2,9 @@
 ## ansible-playbook -i <INVETORY-FILE> -u <User> --extra-vars "hosts=AHK-INT nginx_install=true" redis_install.yml -kK
 - hosts: nginx
   roles:
-    - {role: ../roles/nginx }
-      nginx_error_log_level: info
-      nginx_http_params:
-        - sendfile on
-        - access_log /var/log/nginx/access.log
+    - role: ../roles/nginx
       nginx_sites:
-        pizzamania:
-           - listen 80
-           - server_name pizzamania.demo.com
-           - location / {
-             try_files $uri $uri/ /127.0.0.1:8080;
-                }
-      nginx_configs:
-        proxy:
-            - proxy_set_header X-Real-IP  $remote_addr
-            - proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for
+        bar:
+          template: pizzamania.conf.j2
+          server_name: pizzamania.demo.com
+
